--- a/demo.ipynb
+++ b/demo.ipynb
@@ -234,7 +234,7 @@
     "job_script = \"\"\"#!/bin/bash -l\n",
     "\n",
     "#SBATCH -q debug\n",
-    "#SBATCH -A nstaff\n",
+    "#SBATCH -A ntrain3\n",
     "#SBATCH -N 1\n",
     "#SBATCH -C cpu\n",
     "#SBATCH --tasks-per-node=32\n",
