--- a/SF-API-Training-NERSC-May-2025/sfapi_client_demo.ipynb
+++ b/SF-API-Training-NERSC-May-2025/sfapi_client_demo.ipynb
@@ -19,6 +19,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "b7238fe4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # If using jupyter.nersc.gov uncomment this line and install the client\n",
+    "# !pip install sfapi_client"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "b3d5d613",
    "metadata": {},
    "outputs": [],
@@ -780,7 +791,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.13.2"
   }
  },
  "nbformat": 4,
