Update instructions for the demos

--- a/SF-API-Training-NERSC-May-2025/sfapi_client_demo.ipynb
+++ b/SF-API-Training-NERSC-May-2025/sfapi_client_demo.ipynb
@@ -23,7 +23,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# # If using jupyter.nersc.gov uncomment this line and install the client\n",
+    "# # If using jupyter.nersc.gov and you haven't already, download and install the client\n",
     "# !pip install sfapi_client"
    ]
   },
