Add link to previous recording

--- a/SF-API-Training-NERSC-May-2025/sfapi_client_demo_completed.ipynb
+++ b/SF-API-Training-NERSC-May-2025/sfapi_client_demo_completed.ipynb
@@ -19,6 +19,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "b89fd31a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # If using jupyter.nersc.gov and you haven't already, download and install the client\n",
+    "# !pip install sfapi_client"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "b3d5d613",
    "metadata": {},
    "outputs": [],
